30 Oct 2004 - pwcond can now deal with spinor wavefunctions and with
             fully relativistic PPs with spin-orbit. Initial 
             implementation (still quite experimental). (ADC)
             Added an example to calculate the complex band structure
             of Pt with spin-orbit. (ADC)
             Several improvements to the pwcond code. Now much faster. (ADC)

26 Oct 2004  Patches from Axel Kohlmayer:
             - removed another call to check()
             - iotk_scan in iotk_module had a mixed up 'intent' statement.
             - sun ultra fire 3 compiler warnings
             - cleanup in filename lenght (256)
             - cleanup in include files
             Added lapack_atlas for Mac/OS (Pascal Thibadeau)

25 Oct 2004  removed call to check()
             workarounds for g95 bug [Gerardo]
             Print correct CPU time for runs of more than 100h (PG)
             Wrong routine (elphon instead of elphel) called in
             solve_linter: electron-phonon calculation would not work
             if called directly after a phonon calculation (PG)

19 Oct 2004  Minor format changes: examples updated (GB)

15 Oct 2004  - small cleanup in FPMD
             - added XML-like library module (iotk_module version 2.4) 
               written by Giovanni Bussi
             - added pw_export PP utility to convert restart/punch file
               to portable XML format, still experimental, to compile it: 
               make export (for the time being is not included among the 
               "all", make all does not compile it) 
             - memory usage optimized when using SIC       
             - bug fix in SIC calculation
             (CC)

14 Oct 2004  - ncpp2upf.f90 and cpmd2upf.f90: patch from Axel applied 
             - newd.f90 in the PWNC moved to PW. The merging was already done.
               (AdC)
             - work on FPMD for the merging with CP ( grid dimension )
             - bug fix ( ion randomization )