@@ -202,8 +202,6 @@ PWOBJS = \
 ../PW/add_efield.o \
 ../PW/add_vuspsi.o \
 ../PW/addusdens.o \
-../PW/addusforce.o \
-../PW/addusstress.o \
 ../PW/allocate_fft.o \
 ../PW/allocate_locpot.o \
 ../PW/allocate_nlpot.o \
@@ -257,13 +255,6 @@ PWOBJS = \
 ../PW/estimate.o \
 ../PW/ewald.o \
 ../PW/fftw.o \
-../PW/force_cc.o \
-../PW/force_corr.o \
-../PW/force_ew.o \
-../PW/force_hub.o \
-../PW/force_lc.o \
-../PW/force_us.o \
-../PW/forces.o \
 ../PW/functionals.o \
 ../PW/g_psi.o \
 ../PW/g_psi_mod.o \
@@ -352,15 +343,6 @@ PWOBJS = \
 ../PW/spinor.o \
 ../PW/sph_ind.o \
 ../PW/startup.o \
-../PW/stres_cc.o \
-../PW/stres_ewa.o \
-../PW/stres_gradcorr.o \
-../PW/stres_har.o \
-../PW/stres_hub.o \
-../PW/stres_knl.o \
-../PW/stres_loc.o \
-../PW/stres_us.o \
-../PW/stress.o \
 ../PW/struct_fact.o \
 ../PW/sum_band.o \
 ../PW/sumkg.o \
