@@ -214,6 +214,7 @@ PWOBJS = \
 ../PW/divide_et_impera.o \
 ../PW/dndepsilon.o \
 ../PW/dndtau.o \
+../PW/dndtau_of_k.o \
 ../PW/dprojdepsilon.o \
 ../PW/dprojdtau.o \
 ../PW/dqvan2.o \
